--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
 
-<embed src="file.swf" width="854" height="480"></embed>
+<embed src="Madness Accelerant_september_23rd_2009.swf" width="854" height="480"></embed>
