--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         const player = ruffle.createPlayer();
         const container = document.getElementById("container");
         container.appendChild(player);
-        player.load("movie.swf");
+        player.load("Madness Accelerant_september_23rd_2009.swf");
     });
 </script>
 <script src="path/to/ruffle/ruffle.js"></script>
