--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<script>
+<!DOCTYPE>
+<html>
+    <script>
     window.RufflePlayer = window.RufflePlayer || {};
     window.addEventListener("load", (event) => {
         const ruffle = window.RufflePlayer.newest();
