--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<XMP>
+<!DOCTYPE>
+<html>
+ <head>
+             <XMP>
             <table width="100%" class="ex" cellspacing="0" border="1"> 
                <tr> 
                   <td>
