--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<p>hello this is a repository just to host some swf files and for hosting Ruffle so I can embed them on some google sites.</p>
-<p>If your are interested in using this please check out this pastebin and replace the "SWF FILE HERE" part with any link from this <a href="https://xxsibxx.github.io/ruffleembedsetup112/swf/">swf file list</a> or with any links to SWF files you make</p>
-<p>A video tutorial will be coming out and I will make a link to it here</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Game</title>
+</head>
+<body>
+  <h1>My Game</h1>
+  <object data="Madness Accelerant_september_23rd_2009.swf" type="application/x-shockwave-flash"></object>
+</body>
+</html>
