--- a/index.html
+++ b/index.html
@@ -2,18 +2,9 @@
 <html>
 <head>
   <title>My Game</title>
-  <script src="https://ruffle.rs/ruffle.js"></script>
 </head>
 <body>
   <h1>My Game</h1>
-  <div id="game-container"></div>
-  <script>
-    var ruffle = new Ruffle();
-    ruffle.setSwf("Madness Accelerant_september_23rd_2009.swf");
-    ruffle.setWidth(800);
-    ruffle.setHeight(600);
-    ruffle.setBackground("white");
-    ruffle.attach("game-container");
-  </script>
+  <object data="Madness Accelerant_september_23rd_2009.swf" type="application/x-shockwave-flash"></object>
 </body>
 </html>
