--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Welcome to my Website Bitch</title>
-</head>
-<body>
-    <h1>Welcome</h1>
-    <p>This is my cool Website, hope you like it</p>
+import subprocess
 
-</body>
+# The name of the executable file
+exe_file = "your_executable.exe"
 
-</html>
+# Run the executable file
+subprocess.run(exe_file)
