--- a/index.html
+++ b/index.html
@@ -1,59 +1,5 @@
-<!DOCTYPE>
-<html>
-    <head>
-        <link rel="canonical" href="https://kbhgames.com/game/fnf-vs-american-founding-fathers-father-foundest-mod">
-        <script type="text/javascript" src="./PsychEngine.js"></script>
-        <style type="text/css" id="operaUserStyle"></style>
-        <script>
-            window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
-            if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
-                var meta = document.getElementById ("viewport");
-                meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
-            }
-        </script>
-        <style>
-            html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
-            #openfl-content { background: #000000; width: 100%; height: 100%; }
-            @font-face {
-                font-family: 'Pixel Arial 11 Bold';
-                src: url('assets/fonts/pixel.eot?#iefix') format('embedded-opentype'),
-                url('assets/fonts/pixel.woff') format('woff'),
-                url('assets/fonts/pixel.otf') format('truetype');
-                font-weight: normal;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: 'VCR OSD Mono';
-                src: url('assets/fonts/vcr.eot?#iefix') format('embedded-opentype'),
-                url('assets/fonts/vcr.woff') format('woff'),
-                url('assets/fonts/vcr.ttf') format('truetype'),
-                url('assets/fonts/vcr.svg#VCR%20OSD%20Mono') format('svg');
-                font-weight: normal;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: 'Nokia Cellphone FC Small';
-                src: url('flixel/fonts/nokiafc22.eot?#iefix') format('embedded-opentype'),
-                url('flixel/fonts/nokiafc22.woff') format('woff'),
-                url('flixel/fonts/nokiafc22.ttf') format('truetype'),
-                url('flixel/fonts/nokiafc22.svg#Nokia%20Cellphone%20FC%20Small') format('svg');
-                font-weight: normal;
-                font-style: normal;
-            }
-            @font-face {
-                font-family: 'Monsterrat';
-                src: url('flixel/fonts/monsterrat.eot?#iefix') format('embedded-opentype'),
-                url('flixel/fonts/monsterrat.woff') format('woff'),
-                url('flixel/fonts/monsterrat.ttf') format('truetype'),
-                url('flixel/fonts/monsterrat.svg#Monsterrat') format('svg');
-                font-weight: normal;
-                font-style: normal;
-            }
-    
-        </style>
-        <style type="text/css"></style>
-    </head>
-    <head>
+<!DOCTYPE html>
+<html lang="en"><head>
 	
 	<meta charset="utf-8">
 	
@@ -137,5 +83,4 @@
 <script type="text/javascript" src="/assets/js.js"></script>
 
 
-</body>
-</html>
+</body></html>
